@@ -1,3 +1,10 @@
+2003-11-17  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (alloca): Remove fallback definition.
+	(freea): Remove definition.
+	(VASNPRINTF): Use alloca only for small sizes, say <= 4000 bytes.
+	Reported by Paul Eggert.
+
 2003-11-17  Jim Meyering  <jim@meyering.net>
 
 	On systems without utime and without a utimes function capable of
